samples/_failures_safe/1761669829_54b6b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1038b1c.c: In function ‘main’:
./samples/SAFE/__tmp_e1038b1c.c:157:21: error: expected expression at end of input
  157 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_e1038b1c.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e1038b1c.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e1038b1c.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e1038b1c.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e1038b1c.c:157:21: error: expected declaration or statement at end of input
